Update privacy policy and terms: remove cloud sync, clarify check-in sync to friends

--- a/privacy.html
+++ b/privacy.html
@@ -169,22 +169,22 @@
             </div>
 
             <div class="privacy-section">
-                <h2>3. What We Actually Need (Minimal & Optional)</h2>
-                <p>The only information we might need is what you voluntarily provide:</p>
+                <h2>3. What We Actually Need (Minimal & Essential)</h2>
+                <p>The only information used by the service is what is necessary for its core function:</p>
                 <ul>
-                    <li><strong>Emergency Contact (Optional):</strong> If you choose to set up an emergency contact, you provide their name and email. This is stored locally on your device and only used to send alerts if you miss check-ins. We don't store this on our servers.</li>
-                    <li><strong>Check-in Status (Local Only):</strong> Your check-in records are stored locally on your device. We don't have access to them.</li>
+                    <li><strong>Emergency Contact (Optional):</strong> If you choose to set up an emergency contact, their name and email are used solely to send alerts if you miss check-ins.</li>
+                    <li><strong>Guardian Circle Sync:</strong> When you check in, this status is synced to our server for the sole purpose of updating your friends in your "Guardian Circle". We do not store this information for any other purpose.</li>
                 </ul>
-                <p><strong>Everything else stays on your device. We can't see it. We don't want to see it.</strong></p>
+                <p><strong>Everything else stays on your device. We don't want your personal secrets.</strong></p>
             </div>
 
             <div class="privacy-section">
-                <h2>4. How We Keep You Safe Without Your Data</h2>
+                <h2>4. How the Magic Happens Without Your Data</h2>
                 <p>You might wonder: "How does this work if you don't actively collect data?"</p>
                 <ul>
-                    <li><strong>Local-First Design:</strong> All your data lives on your device. We built the app to work without needing your personal information.</li>
-                    <li><strong>Optional Cloud Sync:</strong> If you choose to enable cloud sync (completely optional), your data is encrypted and stored securely. You can disable it anytime.</li>
-                    <li><strong>Emergency Alerts:</strong> If you set up an emergency contact, alerts are sent directly from your device or through an encrypted service. We don't store or access this information.</li>
+                    <li><strong>Local-First Design:</strong> Most of your settings and history live strictly on your device.</li>
+                    <li><strong>Real-Time Sync:</strong> Our server acts as a temporary bridge to tell your Retrieval Squad that you're still "warm". Once the status is updated for your friends, the server has done its job.</li>
+                    <li><strong>Emergency Alerts:</strong> If you miss a check-in, an automated system triggers an alert to your emergency contact. No human looks at this data.</li>
                 </ul>
             </div>
 
@@ -194,11 +194,8 @@
                 <h3>5.1 Local Storage</h3>
                 <p>All your data stays on your device. We don't have servers full of your information because we don't actively collect it in the first place.</p>
 
-                <h3>5.2 Optional Cloud Storage</h3>
-                <p>If you enable cloud sync (your choice), your data is encrypted end-to-end. We can't read it even if we wanted to. And you can delete it anytime by disabling sync or deleting the app.</p>
-
-                <h3>5.3 Data Retention</h3>
-                <p>Since we don't actively collect your data, there's nothing to retain. When you delete the app, everything disappears. Poof. Gone.</p>
+                <h3>5.2 Data Retention</h3>
+                <p>Since we don't actively collect your data beyond what's needed for the check-in sync, there's nothing much to retain. When you delete the app or remove your account, everything related to you disappears from the sync bridge. Poof. Gone.</p>
             </div>
 
             <div class="privacy-section">
