--- a/terms.html
+++ b/terms.html
@@ -165,11 +165,11 @@
                 <ul>
                     <li>Daily "I'm still warm" check-ins.</li>
                     <li>Designation of a "Chosen One" to be notified when you go suspiciously quiet.</li>
-                    <li>Retrieval Squad formation (judging your friends' survival streaks).</li>
+                    <li>Retrieval Squad formation (syncing your check-in status with your friends).</li>
                     <li>Friendly "Pokes" to make sure your squad isn't turning into ghosts.</li>
                 </ul>
                 <div class="info-box">
-                    <p><strong>Our Privacy Commitment:</strong> We do NOT actively collect, store, or track your personal data. Everything stays on your device. We built this app with privacy as the foundation, not an afterthought.</p>
+                    <p><strong>Our Privacy Commitment:</strong> We do NOT actively collect or track your personal data. Your check-in status is only synced to our server to keep your "Guardian Circle" updated. We don't store your history beyond what's needed for the squad.</p>
                 </div>
             </div>
 
