Update privacy and terms: add 20-day auto-deletion policy

--- a/privacy.html
+++ b/privacy.html
@@ -194,8 +194,8 @@
                 <h3>5.1 Local Storage</h3>
                 <p>All your data stays on your device. We don't have servers full of your information because we don't actively collect it in the first place.</p>
 
-                <h3>5.2 Data Retention</h3>
-                <p>Since we don't actively collect your data beyond what's needed for the check-in sync, there's nothing much to retain. When you delete the app or remove your account, everything related to you disappears from the sync bridge. Poof. Gone.</p>
+                <h3>5.2 Data Retention & Auto-Deletion</h3>
+                <p>Since we don't actively collect your data beyond what's needed for the check-in sync, there's nothing much to retain. However, to keep our "World of the Living" fresh, <strong>if you fail to check in for 20 consecutive days, your account and all associated local sync data will be automatically deleted.</strong> It's our way of saying "RIP" to your digital presence if you've truly gone AFK.</p>
             </div>
 
             <div class="privacy-section">
