--- a/terms.html
+++ b/terms.html
@@ -179,6 +179,7 @@
                 <ul>
                     <li>Provide a real email for someone who actually cares if you're MIA (optional—stored locally on your device only).</li>
                     <li>Don't lose your phone in the sofa cushions for more than 3 days.</li>
+                    <li><strong>Stay active: If you fail to check in for 20 consecutive days, your account will be automatically terminated/deregistered.</strong></li>
                     <li>Acknowledge that we are a dark humor app, not a 24/7 tactical rescue team.</li>
                     <li>Understand that we don't actively collect your data, so you're responsible for backing up your own information if needed.</li>
                 </ul>
