Update privacy and terms: detail data collection items and purpose

--- a/terms.html
+++ b/terms.html
@@ -169,7 +169,7 @@
                     <li>Friendly "Pokes" to make sure your squad isn't turning into ghosts.</li>
                 </ul>
                 <div class="info-box">
-                    <p><strong>Our Privacy Commitment:</strong> We do NOT actively collect or track your personal data. Your check-in status is only synced to our server to keep your "Guardian Circle" updated. We don't store your history beyond what's needed for the squad.</p>
+                    <p><strong>Our Data Usage:</strong> To provide these features, we collect essential data including your <strong>Device ID</strong>, your <strong>latest check-in time</strong>, and your <strong>latest check-in photo</strong>. This information is shared with your "Retrieval Squad" and "Chosen One" so they can verify your safety.</p>
                 </div>
             </div>
 
@@ -177,11 +177,11 @@
                 <h2>3. Your Survival Responsibilities</h2>
                 <p>To avoid false alarms or becoming a permanent fixture, you agree to:</p>
                 <ul>
-                    <li>Provide a real email for someone who actually cares if you're MIA (optional—stored locally on your device only).</li>
+                    <li>Provide a <strong>real name and email</strong> for your emergency contact so we can actually reach them if you're MIA.</li>
+                    <li>Set your preferred <strong>timeout duration</strong> and provide a <strong>custom message</strong> for your emergency contact.</li>
                     <li>Don't lose your phone in the sofa cushions for more than 3 days.</li>
                     <li><strong>Stay active: If you fail to check in for 20 consecutive days, your account will be automatically terminated/deregistered.</strong></li>
                     <li>Acknowledge that we are a dark humor app, not a 24/7 tactical rescue team.</li>
-                    <li>Understand that we don't actively collect your data, so you're responsible for backing up your own information if needed.</li>
                 </ul>
             </div>
 
@@ -209,7 +209,7 @@
                 <h2>6. Ownership of Your Soul (and Code)</h2>
                 <p>All design, code, and irony within this app are owned by us. You just get to use it until your survival streak ends.</p>
                 <div class="info-box">
-                    <p><strong>Your Data, Your Ownership:</strong> Since we don't actively collect your data, you own 100% of it. It's yours. We can't claim ownership of something we don't have.</p>
+                    <p><strong>Your Data, Your Ownership:</strong> You own the data you provide. We only use it to facilitate the app's survival features. When you're gone from the app, your data follows suit (after 20 days of silence).</p>
                 </div>
             </div>
 
